--- a/public/desktop/style.css
+++ b/public/desktop/style.css
@@ -113,8 +113,6 @@ button.audio.playing {
   border: 0;
   margin: 1rem auto;
   display: block;
-  background: white;
-  color: black;
   text-align: center;
   border-radius: 5px;
   letter-spacing: 1px;
@@ -123,6 +121,10 @@ button.audio.playing {
   font-size: 18px;
   font-family: "Teko";
   transition: opacity 1s ease-out;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  color: rgb(237, 71, 93);
 }
 
 .loader {
@@ -166,4 +168,38 @@ button.audio.playing {
 .title.fade-out {
   opacity: 0;
   z-index: -10;
+}
+
+.game-over-container {
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  color: rgb(237, 71, 93);
+  opacity: 1;
+  z-index: 11;
+  transition: opacity 1s ease-out;
+}
+
+.game-over-container.fade-out {
+  opacity: 0;
+  z-index: -1;
+}
+
+.game-over-container h2 {
+  font-size: 5rem;
+  margin: 20px;
+  font-family: "Permanent Marker", sans-serif;
+}
+
+.game-over-container p {
+  font-size: 2rem;
+  margin-bottom: 30px;
+  font-family: "Teko";
 }
