--- a/public/desktop/style.css
+++ b/public/desktop/style.css
@@ -203,3 +203,23 @@ button.audio.playing {
   margin-bottom: 30px;
   font-family: "Teko";
 }
+
+.credits {
+  font-size: 2rem;
+  font-family: "Teko";
+  color: white;
+}
+
+.credits h5 {
+  border-bottom: 4px solid white;
+  margin: 1rem 0;
+}
+
+.credits li {
+  font-size: 1.25rem;
+  text-align: left;
+}
+
+.credits li a {
+  color: white;
+}
